[package]
name = "scylla-macros-flex"
version = "1.0.0"
authors = ["merlleu <mrerl@warlegend.net>"]
edition = "2021"
description = "This fork of scylla-macros provide alternative parsers with improved support."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0" 